Renaming and (re)translating some aspects of the permission views
Translated "Permissions and responsibility"

Consistent translation of permission properties

More translations for permissions

--- a/app/assets/javascripts/views/media_resources/dropdown.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/dropdown.tmpl.haml
@@ -14,7 +14,7 @@
           %i.icon-eye.mid
           ${_jed('Browse')}
       %li.ui-drop-item
-        %a{:title => "${_jed('Read/edit permissions')}",
+        %a{:title => "${_jed('Manage permissions')}",
            :"data-open-permissions" => true,
            :"data-media-resource-id" => "${id}",
            :"data-manageable" => "${is_manageable}",
