--- a/app/views/application/_clipboard.html.haml
+++ b/app/views/application/_clipboard.html.haml
@@ -27,7 +27,7 @@
               %li.ui-drop-item
                 =link_to edit_permissions_path(_action: "view"), id: "view-clipboard-permissions",data: {manageable: false} do
                   %i.icon-lock.mid
-                  = "Berechtigungen aller Inhalte anzeigen"
+                  = _"Permissions and responsibility" 
               %li.ui-drop-item.ui-clipboard-edit-button
                 %a{:href => edit_multiple_media_entries_path}
                   %i.icon-pen.mid
