--- a/app/views/media_resources/actions/_permissions.html.haml
+++ b/app/views/media_resources/actions/_permissions.html.haml
@@ -1,4 +1,4 @@
 %li.ui-drop-item
   =link_to edit_permissions_path(media_resource_id: media_resource.id, _action: 'view'), id: "view_permissions_of_resource"  do
     %i.icon-lock.mid
-    = _"Show permissions"
+    = _"Permissions and responsibility"
