--- a/app/views/responsibilities/edit.html.haml
+++ b/app/views/responsibilities/edit.html.haml
@@ -8,13 +8,14 @@
       .ui-body-title
         .ui-body-title-label
           %h1.title-xl
+            #{_"Transfer responsibility of"} 
             - if @media_resources.count == 1
-              Verantwortlichkeit für "#{@media_resources.first.title}" übertragen
+              "#{@media_resources.first.title}" 
             - else
-              Verantwortlichkeit für #{@media_resources.count}
+              #{@media_resources.count}
               - if @media_resources.count != @all_media_resources.count
-                von #{@all_media_resources.count}
-              Inhalten übertragen
+                #{_"out of"} #{@all_media_resources.count}
+              = _"Inhalten"
 
     .app-body-ui-container
 
