Adjustments and fixes of retina_assets wrt permission views
Squashed commit of the following:

commit 8b503947efa5ec51bc58a8dc58ef207f6f173662
Author: Piotr F <piotr@piotrf.pl>
Date:   Thu Nov 28 13:26:37 2013 +0100

    Tweak mixed values checkbox style in the permission management module.

commit 669f6ad160e2dc67c9900cc18b8b69e54bd10cb1
Author: Piotr F <piotr@piotrf.pl>
Date:   Thu Nov 28 12:37:44 2013 +0100

    Tweak globe icon appearance in the rights management module.

commit 074c2385fe97065f018bd0c75fb58be2cc851eeb
Author: Piotr F <piotr@piotrf.pl>
Date:   Thu Nov 28 12:37:26 2013 +0100

    Remove 'my archive' link from Permissions View.

commit 27b23f597c26597e64843d949deac949c72ec630
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Nov 27 14:57:56 2013 +0100

    Fix display of globe in permissions

commit ee2dc61a73d0bf00c087d3a52c92907ff53e337f
Author: Piotr F <piotr@piotrf.pl>
Date:   Wed Nov 27 12:17:44 2013 +0100

    Fix globe icon missing in permissions screens.

commit dc7afd6f78a386aa0ee542db864451d5e7e0b148
Author: Piotr F <piotr@piotrf.pl>
Date:   Wed Nov 27 12:17:19 2013 +0100

    Fix close modal icon missing.

--- a/app/assets/javascripts/views/groups/delete.tmpl.haml
+++ b/app/assets/javascripts/views/groups/delete.tmpl.haml
@@ -2,7 +2,8 @@
   %form
     .ui-modal-head
       %h3#workgroup-delete-label.title-l Arbeitsgruppe löschen
-      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close", :class => "weak"}
+      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close"}
+        %i.icon-close
     .ui-modal-body
       .form-body
         %p.pvm.phl.by-center Sollen diese Arbeitsgruppe und die mit Ihr verbundenen Berechtigungen gelöscht werden?
