--- a/app/assets/javascripts/views/import/upload/zero_byte_error.tmpl.haml
+++ b/app/assets/javascripts/views/import/upload/zero_byte_error.tmpl.haml
@@ -2,7 +2,8 @@
 
   .ui-modal-head
     %h3.title-l Problem mit der ausgewählten Datei
-    %a.ui-modal-close.weak{"aria-hidden" => "true", "data-dismiss" => "modal", :title => "Close", :type => "button"}
+    %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :title => "Close", :type => "button"}
+      %i.icon-close
 
   .ui-modal-toolbar.top
     .ui-alert.error Dateigrösse ist Null.
