--- a/app/assets/javascripts/views/permissions/dialog.tmpl.haml
+++ b/app/assets/javascripts/views/permissions/dialog.tmpl.haml
@@ -1,6 +1,7 @@
 %form
 
-  %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "${_jed('Close')}", :class => "weak"}
+  %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "${_jed('Close')}"}
+    %i.icon-close
   %h3.title-l 
     ${_jed('Permissions')}
     ${title}
