--- a/app/assets/stylesheets/components/_ui-modals.sass
+++ b/app/assets/stylesheets/components/_ui-modals.sass
@@ -54,11 +54,12 @@
   border-width: 1px 0 0
 
 .ui-modal-close
-  +position-top-right(12px, $space-s)
-  @extend .icon-close
+  +position-top-right(16px, $space-s)
+  color: $mono-heavy
   opacity: $opacity-strong
   &:hover
     opacity: 1
+    text-decoration: none
 
 // Size variations
 
