--- a/app/assets/stylesheets/general/_forms.sass
+++ b/app/assets/stylesheets/general/_forms.sass
@@ -17,6 +17,9 @@ textarea
   margin-bottom: $space-s
   padding: $space-x
 
+input[type="checkbox"]
+  margin: 3px
+
 textarea
   +min-dimension(auto, 100px)
   display: block
