--- a/app/views/styleguide/7 Components/_components.html
+++ b/app/views/styleguide/7 Components/_components.html
@@ -569,7 +569,7 @@
             <div class="ui-modal-head">
               <h3 class="title-l">
                 ui-modal Title
-              </h3><a class="modal-close ui-modal-close" aria-hidden="true" data-dismiss="modal" title="Close"></a>
+              </h3><a class="modal-close ui-modal-close" aria-hidden="true" data-dismiss="modal" title="Close"><i class="icon-close"></i></a>
             </div>
             <div class="ui-modal-toolbar top">
               ui-toolbar content if any
@@ -595,7 +595,7 @@
             <div class="ui-modal-head">
               <h3 class="title-l">
                 ui-modal Title
-              </h3><a class="modal-close ui-modal-close" aria-hidden="true" data-dismiss="modal" title="Close"></a>
+              </h3><a class="modal-close ui-modal-close" aria-hidden="true" data-dismiss="modal" title="Close"><i class="icon-close"></i></a>
             </div>
             <div class="ui-modal-toolbar top">
               ui-toolbar content if any
@@ -621,7 +621,7 @@
             <div class="ui-modal-head">
               <h3 class="title-l">
                 ui-modal Title
-              </h3><a class="modal-close ui-modal-close" aria-hidden="true" data-dismiss="modal" title="Close"></a>
+              </h3><a class="modal-close ui-modal-close" aria-hidden="true" data-dismiss="modal" title="Close"><i class="icon-close"></i></a>
             </div>
             <div class="ui-modal-toolbar top">
               ui-toolbar content if any
@@ -647,7 +647,7 @@
             <div class="ui-modal-head">
               <h3 class="title-l">
                 ui-modal Title
-              </h3><a class="modal-close ui-modal-close" aria-hidden="true" data-dismiss="modal" title="Close"></a>
+              </h3><a class="modal-close ui-modal-close" aria-hidden="true" data-dismiss="modal" title="Close"><i class="icon-close"></i></a>
             </div>
             <div class="ui-modal-toolbar top">
               ui-toolbar content if any
