--- a/app/assets/javascripts/views/filter_sets/create_dialog.tmpl.haml
+++ b/app/assets/javascripts/views/filter_sets/create_dialog.tmpl.haml
@@ -1,7 +1,8 @@
 .modal.hide.fade.ui-modal.narrow{:role => "dialog", :tabindex => "-1"}
   %form
     .ui-modal-head
-      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "${_jed('Close')}", :class => "weak"}
+      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "${_jed('Close')}"}
+        %i.icon-close
       %h3.title-l ${_jed('Create filter set')}
     .ui-modal-body
       .ui-alert ${_jed('Save the currently selected keywords and filters as a filter set.')}
