--- a/app/assets/javascripts/views/groups/create.tmpl.haml
+++ b/app/assets/javascripts/views/groups/create.tmpl.haml
@@ -2,7 +2,8 @@
   %form
     .ui-modal-head
       %h3#workgroup-new-label.title-l Neue Arbeitsgruppe erstellen
-      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close", :class => "weak"}
+      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close"}
+        %i.icon-close
     .ui-modal-body
       .form-body
         .ui-form-group.rowed
