--- a/app/assets/javascripts/views/groups/edit.tmpl.haml
+++ b/app/assets/javascripts/views/groups/edit.tmpl.haml
@@ -1,7 +1,8 @@
 #workgroup-edit.modal.hide.fade.ui-modal.wide{"aria-hidden" => "true", "aria-labelledby" => "workgroup-edit-label", :role => "dialog", :tabindex => "-1"}
 
   .ui-modal-head
-    %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close", :class => "weak"}
+    %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close"}
+      %i.icon-close
     %h3#workgroup-edit-label.title-l ${name}
 
   .ui-modal-toolbar.top
