--- a/app/assets/javascripts/views/media_resource_arcs/organize.tmpl.haml
+++ b/app/assets/javascripts/views/media_resource_arcs/organize.tmpl.haml
@@ -2,7 +2,8 @@
 
   .ui-modal-head
     %h3#add-to-set-label.title-l ${_jed("Add to/remove from set")}
-    %a.ui-modal-close.weak{"aria-hidden" => "true", "data-dismiss" => "modal", :title => "${_jed('Close')}", :type => "button"}
+    %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :title => "${_jed('Close')}", :type => "button"}
+      %i.icon-close
 
   .ui-modal-toolbar.top
     .ui-search
