--- a/app/assets/javascripts/views/media_sets/select_arcs.tmpl.haml
+++ b/app/assets/javascripts/views/media_sets/select_arcs.tmpl.haml
@@ -1,7 +1,8 @@
 .modal.hide.fade.ui-modal.wide{:role => "dialog", :tabindex => "-1"}
   %form
     .ui-modal-head
-      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close", :class => "weak"}
+      %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close"}
+        %i.icon-close
       %h3.title-l ${title}
     .ui-modal-body
 
