--- a/app/views/media_entries/_export.html.haml
+++ b/app/views/media_entries/_export.html.haml
@@ -1,7 +1,8 @@
 .modal.hide#ui-export-dialog.fade.ui-modal.wide{:role => "dialog", :tabindex => "-1"}
   
   .ui-modal-head
-    %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close", :class => "weak"}
+    %a.ui-modal-close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button", :title => "Close"}
+      %i.icon-close
     %h3.title-l 
       = @media_entry.title
       exportieren
