Add user to the group by user details not by ID
TS: changed from @firefox to @jsbrowser

Conflicts:
	features/admin_groups.feature

--- a/app/assets/stylesheets/app_admin.css.sass
+++ b/app/assets/stylesheets/app_admin.css.sass
@@ -1,6 +1,10 @@
 @import 'bootstrap'
+@import 'colors'
 
 @import 'font-awesome'
+
+$grey-lighter: #ddd
+@import 'components/ui-autocomplete'
 
 form.settings
   input[type='text'], textarea
