--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -15,7 +15,7 @@
   width: 100% !important
   li
     list-style: none outside none
-  a.ui-state-focus, a:hover
+  a.ui-state-focus, a.ui-state-hover, a:hover
     background-color: #0081C2
     background-image: linear-gradient(to bottom, #0088cc, #0077b3)
     background-repeat: repeat-x
