--- a/app/assets/stylesheets/app_admin.css.sass
+++ b/app/assets/stylesheets/app_admin.css.sass
@@ -1,6 +1,10 @@
 @import 'bootstrap'
+@import 'colors'
 
 @import 'font-awesome'
+
+$grey-lighter: #ddd
+@import 'components/ui-autocomplete'
 
 @mixin limit($max-width)
   display: block
